--- a/character-study.html
+++ b/character-study.html
@@ -23,17 +23,17 @@
                 <p>RETURN TO SITE</p>
             </div></a>
                 <h1 class="case-study-title">Character Animation</h1>
-                <p class="description col-xs-12 col-sm-12 col-md-6">The following are character animation works I've done. In some instances the rigs were given to me but others I've rigged myself.</p>
+                <p class="description col-xs-12 col-sm-12 col-md-6">The following are character animation works I've created. In some instances the rigs were given to me but others I've rigged myself.</p>
 
            
-            <h3 class="clearfix delmar-sections">The Easter Bunny 2017</h3>
-            <p class="col-lg-6 description">A lot of hard work and development went into this character. Initially it was created for a rigging class, the model was given and our assignment was to make a comprehensive rig and do a 30 second test animation. The second I saw the model the plotline struck me and I created The Easter Bunny. I created the baseline script and used a friend for the voice acting.</p>
+            <h3 class="clearfix delmar-sections">The Easter Bunny (2017)</h3>
+            <p class="col-lg-6 description">A lot of hard work and development went into this character. Initially it was created for a rigging class, the model was given and our assignment was to make a comprehensive rig and do a 30 second test animation. The second I saw the model, the plotline struck me and I created The Easter Bunny. I created the baseline script and used a friend for the voice acting.</p>
             <p class="clearfix"></p>
             <div class="intrinsic-container intrinsic-container-16x9">
                     <iframe src="https://player.vimeo.com/video/199725834?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
                 </div>
 
-            <h3 class="clearfix delmar-sections">Sugar Scope Cereal 2015</h3>
+            <h3 class="clearfix delmar-sections">Sugar Scope Cereal (2015)</h3>
             <p class="col-lg-6 description">This was created to experiment with different aspects of the program Cinema 4D. I wanted to capture the essence of the imagination of a child in this commercial for a magical cereal.</p>
             <p class="clearfix"></p>
             <div class="intrinsic-container intrinsic-container-16x9">
@@ -41,7 +41,7 @@
                 </div>
 
 
-            <h3 class="clearfix delmar-sections">Dinosaur Rig & Animation</h3>
+            <h3 class="clearfix delmar-sections">Dinosaur Rig & Animation (2017)</h3>
             <p class="col-lg-6 description">Animation and rig done by myself. This was just a short animation to test out how my rig was working in C4D.</p>
             <p class="clearfix"></p>
             <div class="intrinsic-container intrinsic-container-16x9">
@@ -49,16 +49,16 @@
                 </div>
 
 
-            <h3 class="clearfix delmar-sections">Chipmunk</h3>
-            <p class="col-lg-6 description">Animation and rigging done by myself. Dynamics applied to shirt. Created for use in a game featured currently on Boston Children's Hospital's interactive wall. In the game the character peeks and pops through a door as it is triggered by passerby's movement. C4D</p>
+            <h3 class="clearfix delmar-sections">Chipmunk (2017)</h3>
+            <p class="col-lg-6 description">Animation and rigging done by myself. Dynamics applied to shirt. Created for use in a game featured currently on Boston Children's Hospital's interactive wall. In the game the character peeks and pops through a door as it is triggered by passerby's movement.</p>
             <p class="clearfix"></p>
             <div class="intrinsic-container intrinsic-container-16x9">
                     <iframe src="https://player.vimeo.com/video/199726588?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
                 </div>
 
 
-            <h3 class="clearfix delmar-sections">Twiggy</h3>
-            <p class="col-lg-6 description">Animation and rigging done by myself. Created for use in a game featured currently on Boston Children's Hospital's interactive wall. In the game the character peeks and pops through a door as it is triggered by passerby's movement. C4D</p>
+            <h3 class="clearfix delmar-sections">Twiggy (2017)</h3>
+            <p class="col-lg-6 description">Animation and rigging done by myself. Created for use in a game featured currently on Boston Children's Hospital's interactive wall. In the game the character peeks and pops through a door as it is triggered by passerby's movement.</p>
             <p class="clearfix"></p>
             <div class="intrinsic-container intrinsic-container-16x9">
                     <iframe src="https://player.vimeo.com/video/249577188?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
