--- a/delmar-study.html
+++ b/delmar-study.html
@@ -25,13 +25,13 @@
                 <h1 class="case-study-title">Del Mar Thoroughbred Club</h1>
                 <h2 class="case-study-sub">Social Media Internship</h2>
                 <br>
-                <p class="description col-xs-12 col-sm-12 col-md-6">For the past five months I've been working for MeadsDurket, an agency in San Diego. From June 2017-August 2017 I worked in house creating content for our client, Del Mar Racing. I created countdown videos and content for our summer season, edited photos, and wrote copy. I still work for MeadsDurket as a remote part-time intern. I now not only work on Del Mar social but San Diego Symphony as well. </p>
+                <p class="description col-xs-12 col-sm-12 col-md-6">From June of 2017 through January of 2018 I worked for MeadsDurket, an agency in San Diego. From June to August I worked in house creating content for our biggest client, Del Mar Racing. I created countdown videos and content for our summer season, edited photos, and wrote copy. I continued to work for MeadsDurket as a remote part-time intern not only working on Del Mar social but San Diego Symphony as well. </p>
                 <img class="col-xs-12 col-md-6" src="img/delmar-1.png">
 
             
             <h3 class="clearfix delmar-sections">Instagram Stories</h3>
             <div class="col-sm-12 col-lg-6">
-                <p class="description">A big role that I took on was the creation of "Weekend Ahead" Instagram stories. The stories are a hybrid of work created in Photoshop and After Effects and Instagram effects in order to present information in an appealing way. This was a highly iterative process with the client and the end result had impressive reach.</p>
+                <p class="description">A role that I initiated was the development of "Weekend Ahead" Instagram stories. The stories are a hybrid of work created in Photoshop, After Effects, and Instagram in order to present information in an appealing way. This was a highly iterative process with the client, and the end result had impressive reach.</p>
             </div>
             <img class="clearfix delmar-images col-xs-6 col-md-3" src="img/delmar-3.gif">
             <img class="delmar-images col-xs-6 col-md-3" src="img/delmar-4.gif">
@@ -40,7 +40,7 @@
 
            
             <h3 class="clearfix delmar-sections">Fall Countdown</h3>
-            <p class="col-lg-6 description">Fall Season 2017 is an exciting one for Del Mar as they host the Breeders' Cup for the first time in history. The world's eyes were on the track so our content had to be spot on. I designed and executed our Fall Season countdown videos, a series of six videos using footage provided edited in After Effects. As is the nature of short form content the videos had to be produced quickly in a way that was easy to repeat.</p>
+            <p class="col-lg-6 description">Fall Season 2017 was an exciting one for Del Mar as they hosted the Breeders' Cup for the first time in history. The world's eyes were on the track so our content had to be spot on. I designed and executed our Fall Season countdown videos, a series of six videos using sourced footage that I edited in After Effects. As is the nature of short form content, the videos had to be produced quickly in a way that was easy to repeat.</p>
             <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
                 <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FDelMarRaces%2Fvideos%2F10155796959293331%2F&show_text=0&width=560" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
