--- a/index.html
+++ b/index.html
@@ -24,56 +24,62 @@
 
         <nav class="clearfix">
             <ul>
-                <li class="col-xs-3 col-md-1 col-md-push-8"><a href=#home>HOME</a></li>
-                <li class="col-xs-3 col-md-1 col-md-push-8"><a href=#about>ABOUT</a></li>
-                <li class="col-xs-3 col-md-1 col-md-push-8"><a href=#work>WORK</a></li>
-                <li class="col-xs-3 col-md-1 col-md-push-8"><a href=#contact>CONTACT</a></li>
+                <li class="col-xs-2 col-md-1 col-md-push-7"><a href=#home>HOME</a></li>
+                <li class="col-xs-2 col-md-1 col-md-push-7"><a href=#work-1>REEL</a></li>
+                <li class="col-xs-2 col-md-1 col-md-push-7"><a href=#about>ABOUT</a></li>
+                <li class="col-xs-2 col-md-1 col-md-push-7"><a href=#work-2>WORK</a></li>
+                <li class="col-xs-2 col-md-1 col-md-push-7"><a href=#contact>CONTACT</a></li>
             </ul>
         </nav>
-
-        <div id="about">
-            <div id="about-content" class="col-xs-12">
-            <h1 data-aos="fade-up">Get to know me, then hire me!</h1>
-                <p data-aos="fade-up" class="col-xs-12 col-md-12 col-lg-6"><strong>Some essential details:</strong> I’m Robin Simon, and I just graduated from the University of Connecticut in 3 and a half years with a major in Digital Media and Design. I concentrate primarily in 3D animation but I have experience with everything from motion graphics to projection mapping. I am so pumped to join the professional digital space and use my skills to create content that goes far beyond client expectations. My educational and work experience have conditioned me to live outside my comfort zone. I thrive in an atmosphere where I am challenged to go beyond my current skill set. With every project comes a different approach, a different program to learn, a new platform. These changes excite me instead of intimidate, and allow me to learn how to be adaptable.
-                <br><br>
-                <strong>Some fun facts:</strong> Meeting new people is my jam specifically because I can tell them the jokes all my other friends are sick of hearing. One of my unrelated talents is clapping very loudly. Like I can clap really loud, I am the ideal audience member.</p>
-                <div class="about-img col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                    <img src="img/me.png" data-aos="zoom-in-left" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                </div>
-            </div>
-        </div>
-
-        <div id="work" class="clearfix col-xs-12">
+        
+        <div id="work-1" class="clearfix col-xs-12">
             <div class="content">
                 <h1 data-aos="fade-up">Who wants to see some work?</h1>
                 <div id="reel" class="intrinsic-container intrinsic-container-16x9">
                     <iframe src="https://player.vimeo.com/video/245870678?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
                 </div>
-            <h1 id="case-studies" data-aos="fade-up">Case Studies: A Deeper Dive into my Work</h1>
-            <h3 data-aos="fade-up">Click around, you know you want to...</h3>
-            <a href="jib-study.html"><div class="case-studies jib col-xs-6 col-md-4" data-aos="zoom-in">
-            </div></a>
-            <a href="delmar-study.html"><div class="case-studies delmar col-xs-6 col-md-4" data-aos="zoom-in">
-            </div></a>
-            <a href="stella-study.html"><div class="case-studies stella col-xs-6 col-md-4" data-aos="zoom-in">
-            </div></a>
-            <a href="bch-study.html"><div class="case-studies bch col-xs-6 col-md-4" data-aos="zoom-in">
-            </div></a>
-            <a href="mlr-study.html"><div class="case-studies mlr col-xs-6 col-md-4" data-aos="zoom-in">
-            </div></a>
-            <a href="character-study.html"><div class="case-studies character col-xs-6 col-md-4" data-aos="zoom-in">
-            </div></a>
-            <a href="motion-study.html"><div class="case-studies motion col-xs-6 col-md-4" data-aos="zoom-in">
-            </div></a>
+            </div>
         </div>
 
-        <div id="contact" class="col-xs-12 clearfix">
-            <h1>Let's get in touch</h1>
-            <a href="img/resume.pdf"><h3 id="download" style="color: white">Download my resume</h3></a>
-            <h3>Email me!<br> robmsimon@gmail.com</h3></a>
-
+        <div id="about" class="clearfix">
+            <div id="about-content" class="col-xs-12">
+            <h1 data-aos="fade-up">Get to know me, then hire me!</h1>
+                <p data-aos="fade-up" class="col-xs-12 col-md-12 col-lg-6"><strong>Some essential details:</strong> I’m Robin Simon, and I just graduated Summa Cum Laude from the University of Connecticut in 3 and a half years, with a major in Digital Media and Design. My concentration is in 3D animation but I have experience with diverse platforms, from motion graphics to projection mapping. I am so pumped to join the professional digital space and use my skills to create content that goes far beyond client expectations. My educational and work experience have conditioned me to live outside my comfort zone. I thrive in an atmosphere where I am challenged to stretch the boundaries. With every project comes a different approach, a different program to learn, a new platform. These challenges excite me instead of intimidate, and allow me to demonstrate my adaptability and flexibility.
+                <br><br>
+                <strong>Let's Break the Ice:</strong> Meeting new people is my jam One of my unrelated talents is clapping very loudly. Like I can clap really loud, I am the ideal audience member.</p>
+                <div class="about-img col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                    <img src="img/me.jpg" data-aos="zoom-in-left" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                </div>
+            </div>
         </div>
-    </div>
+
+        <div id="work-2" class="clearfix col-xs-12">
+            <div class="content">
+                <h1 id="case-studies" data-aos="fade-up">Case Studies: A Deeper Dive into my Work</h1>
+                <h3 data-aos="fade-up">Click around, you know you want to...</h3>
+                <a href="jib-study.html"><div class="case-studies jib col-xs-6 col-md-4" data-aos="zoom-in">
+                </div></a>
+                <a href="delmar-study.html"><div class="case-studies delmar col-xs-6 col-md-4" data-aos="zoom-in">
+                </div></a>
+                <a href="mlr-study.html"><div class="case-studies mlr col-xs-6 col-md-4" data-aos="zoom-in">
+                </div></a>
+                <a href="bch-study.html"><div class="case-studies bch col-xs-6 col-md-4" data-aos="zoom-in">
+                </div></a>
+                <a href="stella-study.html"><div class="case-studies stella col-xs-6 col-md-4" data-aos="zoom-in">
+                </div></a>
+                <a href="character-study.html"><div class="case-studies character col-xs-6 col-md-4" data-aos="zoom-in">
+                </div></a>
+                <a href="motion-study.html"><div class="case-studies motion col-xs-6 col-md-4" data-aos="zoom-in">
+                </div></a>
+                <div id="contact" class="col-xs-12 clearfix">
+                    <h1>Let's get in touch</h1>
+                    <a href="img/resume.pdf"><h3 id="download" style="color: white">Download my resume</h3></a>
+                    <h3>Email me!<br> robmsimon@gmail.com</h3>
+                </div>
+            </div>
+        </div>
+
+        
 
         <footer class="clearfix">
             <div class="col-xs-6 col-md-2" data-aos="fade-up">
