--- a/jib-study.html
+++ b/jib-study.html
@@ -24,16 +24,16 @@
                 <p>RETURN TO SITE</p>
             </div></a>
             <div id="jib">
-                <h1 class="case-study-title">Jack in the Box</h1>
-                <h2 class="case-study-sub">Freelance social content creation done for Horizon Media.</h2>
+                <h1 class="case-study-title">Jack in the Box (JIB)</h1>
+                <h2 class="case-study-sub">Freelance Social Content Creation-Horizon Media.</h2>
                 <br>
-                <p class="description col-xs-12 col-sm-12 col-md-6">Over the past year and a half I have been a remote freelance designer for Horizon Media. While I've done work for many clients such as Snyder's of Hanover, Maryland Live Casino, as well as worked on some new business pitches, Jack in the Box has been my most regular. Below are the social content pieces I've created. I have a very specific style when I produce Jack in the Box content in order to reflect the eclectic nature of the brand. Much of the work is a kitbash of images compiled in Photoshop and animated in the 3D space in Cinema 4D.</p>
+                <p class="description col-xs-12 col-sm-12 col-md-6">Over the past year and a half I have been a remote freelance designer for Horizon Media. While I've done work for many clients such as Snyder's of Hanover, Maryland Live Casino, as well as worked on some new business pitches, Jack in the Box has been my most regular assignment. Below are the social content pieces I've created. I have a very specific style when I produce Jack in the Box content in order to reflect the eclectic nature of the brand. Much of the work is a kitbash of images compiled in Photoshop and animated in the 3D space in Cinema 4D.</p>
             </div>
 
             <div id="vmas">
                 <h3 class="clearfix">VMAs</h3>
                     <div class="col-sm-12 col-md-12 col-lg-6">
-                        <p class="description">Jack in the Box is a client that likes to stay in the know, and on top of social trends. Leading up to the VMAs they wanted a piece of content that was culturally relevant. After some back and fourth with the client we decided on a spoof of the Hotline Bling music video. What better than a Drake living in a Jack in the Box sign saucin' some buttery jacks? Nothing. </p>
+                        <p class="description">Jack in the Box is a client that likes to stay in the know, and on top of social trends. Leading up to the VMAs they wanted a piece of content that was culturally relevant. After some back and forth with the client we decided on a spoof of the Hotline Bling music video. What better than Drake living in a Jack in the Box sign saucin' some buttery jacks? Nothing.</p>
                         <h4 class="clearfix quote">"What better than a Drake living in a Jack in the Box sign saucin' some buttery jacks? Nothing."</h4>
                     </div>
                     <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
@@ -44,7 +44,7 @@
             <div id="blizzcon">
                 <h3 class="clearfix">BlizzCon</h3>
                 <div class="col-sm-12 col-lg-6">
-                    <p class="description">BlizzCon is a huge event in the gaming community taking place in Southern California. Jack, as usual, had to be a part of it. After doing some research on what games were hot and consulting some of the close gamers in my life I went for a battle scene. Because WWII era planes are cool and they're even cooler when they shoot lasers and they're even cooler than that when hamburgers are the pilots. Moving on...</p>
+                    <p class="description">BlizzCon is a huge event in the gaming community taking place in Southern California. Jack, as usual, had to be a part of it. After doing some research on what games were hot and consulting some of the gamers in my life I went for a battle scene. Because WWII era planes are cool and they're even cooler when they shoot lasers and they're even cooler than that when hamburgers are the pilots. Moving on...</p>
                     <h4 class="clearfix quote">"...and they're even cooler than that when hamburgers are the pilots. Moving on..."</h4>
                 </div>
                 <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
@@ -56,7 +56,7 @@
 
             <div id="chatbot">
                 <h3 class="clearfix">Chatbot GIFs</h3>
-                <p class="col-lg-6 description">The prompt for this assignment was pretty much just to make four of the coolest, funnest, most viral-esque GIFs possible in a 24 hour period in order to promote JIB's Brunchfest. This is still one of my favorite pieces of work becuase it was demanding but so so fun. Juggling this assignment plus my regularly scheduled courses proved to be an interesting challenge. By interesting challenge I mean I was photoshopping cheeseburgers in my communications lecture of 400 people.</p>
+                <p class="col-lg-6 description">The prompt for this assignment was pretty much to make four of the coolest, funnest, most viral-esque GIFs possible in a 24 hour period in order to promote JIB's Brunchfest. This is still one of my favorite pieces of work becuase it was demanding but so so fun. Juggling this assignment plus my regularly scheduled courses proved to be an interesting challenge. By interesting challenge I mean I was photoshopping cheeseburgers in my communications lecture of 400 people.</p>
                  <h4 class="clearfix quote col-lg-6">"By interesting challenge I mean I was photoshopping cheeseburgers in my communications lecture..."</h4>
                  <div class="chatbot-gifs col-xs-12 col-lg-6">
                     <img class="col-xs-12 col-lg-6" src="img/chatbot-1.gif">
