--- a/motion-study.html
+++ b/motion-study.html
@@ -26,7 +26,7 @@
                 <p class="description col-xs-12 col-sm-12 col-md-6">The following are motion graphics and 2D animation work I've done. This work ranges from kinetic typography to broadcast graphics.</p>
 
            
-            <h3 class="clearfix delmar-sections">NYT Modern Love The Podcast Kinetic Typography: Sarah Silverman</h3>
+            <h3 class="clearfix delmar-sections">New York Times Modern Love The Podcast Kinetic Typography: Sarah Silverman</h3>
             <p class="col-lg-6 description">Kinetic type piece done for the NYT Modern Love The Podcast after being chosen as an animator for another WBUR piece.</p>
             <p class="clearfix"></p>
             <div class="intrinsic-container intrinsic-container-16x9">
