--- a/stella-study.html
+++ b/stella-study.html
@@ -25,7 +25,7 @@
                 <h1 class="case-study-title">Stella D'Oro and Archway Cookies</h1>
                 <h2 class="case-study-sub">Social Design Internship</h2>
                 <br>
-                <p class="description col-xs-12 col-sm-12 col-md-6">I began working for Horizon Media the summer of 2016. I was living and working in New York and photographing cookies everyday. Living the life if you ask me. These were my first big clients and the process of creating content for them served as my foundation knowledge of social media. I worked with a community manager to slate out topics and then I did all the creative.</p>
+                <p class="description col-xs-12 col-sm-12 col-md-6">I began working for Horizon Media the summer of 2016. I was living and working in New York and photographing cookies everyday. Living the life if you ask me. These were my first big clients and the process of creating content for them served as my foundational knowledge of social media. I worked with a community manager to slate out topics and I executed the creative component.</p>
                 <img class="clearfix stella-images col-xs-6 col-md-4" src="img/stella-2.png">
                 <img class="stella-images col-xs-6 col-md-4" src="img/stella-3.png">
                 <img class="stella-images col-xs-6 col-md-4" src="img/stella-5.png">
