--- a/bch-study.html
+++ b/bch-study.html
@@ -22,15 +22,15 @@
             <a href="index.html#case-studies"><div class="go-back">
                 <p>RETURN TO SITE</p>
             </div></a>
-                <h1 class="case-study-title">Boston Children's Hospital</h1>
+                <h1 class="case-study-title">Boston Children's Hospital (BCH)</h1>
                 <h2 class="case-study-sub">Interactive Design Internship</h2>
                 <br>
-                <p class="description col-xs-12 col-sm-12 col-md-6">The Digital Media and Design Department at UConn created a 20 foot interactive wall at BCH. This wall stands in the middle of the lobby in front of an open area surrounded by Microsoft Kinects. The motion of passerbys is captured and triggers anything from animations on screen to the person taking on a character themselves. I worked on the BCH project for two full years until the end of our contract with the hospital. This was one of the most rewarding things I have ever done and proved to me that art can make the biggest difference.</p>
+                <p class="description col-xs-12 col-sm-12 col-md-6">The Digital Media and Design Department at UConn were selected to create a 20 foot interactive wall at BCH. This wall stands in the middle of the lobby, in front of an open area, surrounded by Microsoft Kinects. The motion of passerbys is captured and triggers and interactive event onscreen. I worked on the BCH project for two full years until the end of our contract with the hospital. This was one of the most rewarding projects I have ever been involved in and proved to me the impact that art can have.</p>
             
 
             <h3 class="clearfix bch-section">Monsters Scene</h3>
             <div class="col-sm-12 col-lg-6">
-                <p class="description">The Monster's Scene took almost a full year to complete from ideation to execution. There were so many moving parts and challenges. We had to invent, draw, model, rig and animate the characters each with their own personality. The aim of this game was to have children and guest walk by the wall and have their motion trigger the opening of doors. Each character had a 'peek' animation as well as a 'pop' animation played when the user remained in the same spot. </p>
+                <p class="description">The Monster's Scene took almost a full year to complete from ideation to execution. There were so many moving parts and challenges. We had to invent, draw, model, rig and animate the characters each with their own personality. The aim of this game was to have children and guests walk by the wall and have their motion trigger the opening of doors. Each character had a 'peek' animation as well as a 'pop' animation played when the user remained in the same spot. </p>
             </div>
             <p class="clearfix caption">A sample of a character breakdown sheet</p>
             <p class="caption-sub">Breakdown sheets created by project manager Hunter French</p>
