--- a/mlr-study.html
+++ b/mlr-study.html
@@ -41,33 +41,33 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides ">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext">1 / 5</div>
     <img src="img/mlr-4.png" style="width:100%">
-    <div class="text">frame one</div>
+    <div class="text">FRAME ONE</div>
   </div>
 
   <div class="mySlides ">
-    <div class="numbertext">2 / 3</div>
+    <div class="numbertext">2 / 5</div>
     <img src="img/mlr-5.png" style="width:100%">
-    <div class="text">frame two</div>
+    <div class="text">FRAME TWO</div>
   </div>
 
   <div class="mySlides ">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">3 / 5</div>
     <img src="img/mlr-6.png" style="width:100%">
-    <div class="text">frame three</div>
+    <div class="text">FRAME THREE</div>
   </div>
 
   <div class="mySlides ">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">4 / 5</div>
     <img src="img/mlr-7.png" style="width:100%">
-    <div class="text">frame four</div>
+    <div class="text">FRAME FOUR</div>
   </div>
 
   <div class="mySlides ">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">5 / 5</div>
     <img src="img/mlr-8.png" style="width:100%">
-    <div class="text">frame five</div>
+    <div class="text">FRAME FIVE</div>
   </div>
 
   <!-- Next and previous buttons -->
@@ -88,7 +88,7 @@
 
             <h3 class="clearfix mlr-section">Hunger</h3>
             <div class="col-sm-12 col-lg-6">
-                <p class="description">This piece was also created initally for a final project. I wanted to work on a bunch of skills with this piece so below you'll see some inital passes at digital painting, and some advanced organic modeling. Of course my inspiration was my own dog and home.</p>
+                <p class="description">This piece was also created initally for a final project. Through the execution of this piece I wanted to refine my skills in digital painting and advanced organic modeling. Of course my inspiration was my own dog and home.</p>
             </div>
             <p class="clearfix caption">Process</p>
             <img class="col-xs-12 col-md-3" src="img/mlr-9.jpg">
