--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 data-aos="fade-up">Get to know me, then hire me!</h1>
                 <p data-aos="fade-up" class="col-xs-12 col-md-12 col-lg-6"><strong>Some essential details:</strong> I’m Robin Simon, and I just graduated Summa Cum Laude from the University of Connecticut in 3 and a half years, with a major in Digital Media and Design. My concentration is in 3D animation but I have experience with diverse platforms, from motion graphics to projection mapping. I am so pumped to join the professional digital space and use my skills to create content that goes far beyond client expectations. My educational and work experience have conditioned me to live outside my comfort zone. I thrive in an atmosphere where I am challenged to stretch the boundaries. With every project comes a different approach, a different program to learn, a new platform. These challenges excite me instead of intimidate, and allow me to demonstrate my adaptability and flexibility.
                 <br><br>
-                <strong>Let's Break the Ice:</strong> Meeting new people is my jam One of my unrelated talents is clapping very loudly. Like I can clap really loud, I am the ideal audience member.</p>
+                <strong>Let's Break the Ice:</strong> I'm an adventure seeker and people person. I love the work I do so pass me a redbull, a computer, and a killer team and lets get to creating.</p>
                 <div class="about-img col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <img src="img/me.jpg" data-aos="zoom-in-left" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 </div>
