--- a/mlr-study.html
+++ b/mlr-study.html
@@ -40,15 +40,28 @@
         <div class="slideshow-container">
 
         <div class="mySlides1">
-        <img src="img/mlr-4.png" style="width:100%">
+          <div class="numbertext">1 / 5</div>
+          <img src="img/mlr-4.png" style="width:100%">
         </div>
 
         <div class="mySlides1">
+          <div class="numbertext">2 / 5</div>
           <img src="img/mlr-5.png" style="width:100%">
         </div>
 
         <div class="mySlides1">
+          <div class="numbertext">3 / 5</div>
           <img src="img/mlr-6.png" style="width:100%">
+        </div>
+
+        <div class="mySlides1">
+          <div class="numbertext">4 / 5</div>
+          <img src="img/mlr-7.png" style="width:100%">
+        </div>
+
+        <div class="mySlides1">
+          <div class="numbertext">5 / 5</div>
+          <img src="img/mlr-8.png" style="width:100%">
         </div>
 
         <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
@@ -81,6 +94,7 @@
             <div class="col-sm-12 col-lg-12">
                 <p class="description">Some other work with less background information, just plain fun!</p>
             
+              
               <img class="col-xs-6 col-md-4" src="img/mlr-17.png">
               <img class="col-xs-6 col-md-4" src="img/mlr-18.png">
               <img class="col-xs-6 col-md-4" src="img/mlr-19.png">
