--- a/delmar-study.html
+++ b/delmar-study.html
@@ -44,6 +44,7 @@
             <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
                 <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FDelMarRaces%2Fvideos%2F10155796959293331%2F&show_text=0&width=560" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
+            <div></div>
 
         </div>
 
