--- a/jib-study.html
+++ b/jib-study.html
@@ -34,9 +34,9 @@
                 <h3 class="clearfix">VMAs</h3>
                     <div class="col-sm-12 col-md-12 col-lg-6">
                         <p class="description">Jack in the Box is a client that likes to stay in the know, and on top of social trends. Leading up to the VMAs they wanted a piece of content that was culturally relevant. After some back and forth with the client we decided on a spoof of the Hotline Bling music video. What better than Drake living in a Jack in the Box sign saucin' some buttery jacks? Nothing.</p>
-                        <h4 class="clearfix quote">"What better than a Drake living in a Jack in the Box sign saucin' some buttery jacks? Nothing."</h4>
+                        <!--<h4 class="clearfix quote">"What better than a Drake living in a Jack in the Box sign saucin' some buttery jacks? Nothing."</h4>-->
                     </div>
-                    <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
+                    <div class="col-xs-10 col-xs-push-1 embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10153818662527304%2F&show_text=0&width=560" frameborder="0" allowTransparency="true" allowFullScreen="true" ></iframe>
                     </div>
             </div>
@@ -45,9 +45,9 @@
                 <h3 class="clearfix">BlizzCon</h3>
                 <div class="col-sm-12 col-lg-6">
                     <p class="description">BlizzCon is a huge event in the gaming community taking place in Southern California. Jack, as usual, had to be a part of it. After doing some research on what games were hot and consulting some of the gamers in my life I went for a battle scene. Because WWII era planes are cool and they're even cooler when they shoot lasers and they're even cooler than that when hamburgers are the pilots. Moving on...</p>
-                    <h4 class="clearfix quote">"...and they're even cooler than that when hamburgers are the pilots. Moving on..."</h4>
+                    <!--<h4 class="clearfix quote">"...and they're even cooler than that when hamburgers are the pilots. Moving on..."</h4>-->
                 </div>
-                <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
+                <div class="col-xs-10 col-xs-push-1 embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10154014911087304%2F&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
                 </div>
                 
@@ -57,8 +57,8 @@
             <div id="chatbot">
                 <h3 class="clearfix">Chatbot GIFs</h3>
                 <p class="col-lg-6 description">The prompt for this assignment was pretty much to make four of the coolest, funnest, most viral-esque GIFs possible in a 24 hour period in order to promote JIB's Brunchfest. This is still one of my favorite pieces of work becuase it was demanding but so so fun. Juggling this assignment plus my regularly scheduled courses proved to be an interesting challenge. By interesting challenge I mean I was photoshopping cheeseburgers in my communications lecture of 400 people.</p>
-                 <h4 class="clearfix quote col-lg-6">"By interesting challenge I mean I was photoshopping cheeseburgers in my communications lecture..."</h4>
-                 <div class="chatbot-gifs col-xs-12 col-lg-6">
+                 <!--<h4 class="clearfix quote col-lg-6">"By interesting challenge I mean I was photoshopping cheeseburgers in my communications lecture..."</h4>-->
+                 <div class="chatbot-gifs col-xs-12 col-lg-10 col-lg-pull-1 clearfix">
                     <img class="col-xs-12 col-lg-6" src="img/chatbot-1.gif">
                     <img class="col-xs-12 col-lg-6" src="img/chatbot-2.gif">
                     <img class="col-xs-12 col-lg-6" src="img/chatbot-3.gif">
@@ -72,9 +72,9 @@
                 <h3 class="clearfix">World Series of Poker</h3>
                 <div class="col-sm-12 col-lg-6">
                     <p class="description">Keeping with their traditon with keeping up with pop culture JIB wanted a social piece for the World Series of Poker. They once had a live action version of this video from years ago and wanted to recreate it. (View it here: https://www.youtube.com/watch?v=tXH5HL8ppxw) I put a modern twist on it and portrayed an animated Jack as quite the poker player. Who knew a white circle could have such a poker face?</p>
-                    <h4 class="clearfix quote">"Who knew a white circle could have such a poker face?"</h4>
+                    <!--<h4 class="clearfix quote">"Who knew a white circle could have such a poker face?"</h4>-->
                 </div>
-                <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
+                <div class="col-xs-10 col-xs-push-1 embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10154728339122304%2F&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
                 </div>
             </div>
